# STEMwerk-core

./: README.md  STEMwerk-restructuring-plan.md  pyproject.toml
src/stemwerk_core/: __init__.py  devices.py  models.py  progress.py  separator.py
tests/: test_devices.py  test_models.py  test_separator.py
